--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,4 +21,6 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: docker push
-      run: docker push ${{secrets.DOCKER_USER}}/node-foundry
+        env: 
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+      run: docker push $DOCKER_USER/node-foundry
